new updates to both frontend and backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,11 @@
         "ntvs",
         "olly",
         "pexels",
+        "pilabut",
         "qrcode",
         "Rrhus",
+        "shattha",
+        "Sxrdn",
         "womens"
     ]
 }
